--- a/BootStrap/Top_A_One/contact.html
+++ b/BootStrap/Top_A_One/contact.html
@@ -28,13 +28,13 @@
                           Category
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                          <li><a class="dropdown-item" href="#">Computer Basic</a></li>
-                          <li><a class="dropdown-item" href="#">Excel for Office</a></li>
-                          <li><a class="dropdown-item" href="#">Business Pagemaker</a></li>
-                          <li><a class="dropdown-item" href="#">Photoshop for Business</a></li>
-                          <li><a class="dropdown-item" href="#">Adobe Illustrator</a></li>
-                          <li><a class="dropdown-item" href="#">Software Installation</a></li>
-                          <li><a class="dropdown-item" href="#">Vedio Editing for Basic</a></li>
+                          <li><a class="dropdown-item" href="computer_basic.html">Computer Basic</a></li>
+                          <li><a class="dropdown-item" href="excel_for_office.html">Excel for Office</a></li>
+                          <li><a class="dropdown-item" href="business_pagemaker.html">Business Pagemaker</a></li>
+                          <li><a class="dropdown-item" href="photoshop_for_business.html">Photoshop for Business</a></li>
+                          <li><a class="dropdown-item" href="adobe_illustractor.html">Illustration & Logo Design</a></li>
+                          <li><a class="dropdown-item" href="software_installation.html">Software Installation</a></li>
+                          <li><a class="dropdown-item" href="vedio_editing_basic.html">Vedio Editing for Basic</a></li>
                         </ul>
                     </div>
                     <li class="nav-item">
@@ -156,6 +156,16 @@
     
     <!-- end form -->
 
+    <!-- start google map -->
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1673.0670943857776!2d94.72538440768352!3d16.782163500372423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2smm!4v1725635167053!5m2!1sen!2smm"class="border-0 w-100 h-100" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+    <!-- end google map -->
+
     <!-- start footer -->
     <footer class="container-fluid bg-dark mt-5">
         <div class="container text-white py-5">
@@ -164,10 +174,10 @@
                     <img src="images/logo_1.jpg" alt="" class="footer_logo" >
                     <p>It's an ideal opportunity to begin investing your energy such that illuminates you.</p>
                     <p>
-                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
-                        <a href="https://www.youtube.com/@topaonecomputer"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
-                        <a href="https://t.me/topaonetelegram"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
-                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
+                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi" class="social_logo"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
+                        <a href="https://www.youtube.com/@topaonecomputer" class="social_logo"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
+                        <a href="https://t.me/topaonetelegram" class="social_logo"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
+                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc" class="social_logo"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
                     </p>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Enter Email.." aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -183,7 +193,7 @@
                     <hr class="ms-lg-3 tm_hr border-light me-lg-3">
                     <a href="course.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Course</a>
                     <hr class="ms-lg-3 tm_hr border-light me-lg-3">
-                    <a href="blog.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Blog</a>
+                    <a href="contact.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Contact</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <h5 class="pt-3">Contact us</h5>
@@ -201,7 +211,7 @@
                     <hr class="w-25">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/5.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
                             <p class="justify-content-between">Photoshop for Business</p>
@@ -211,10 +221,10 @@
                     <hr class="tm_hr border-light me-lg-3">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/6.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
-                            <p class="justify-content-between">Photoshop for Business</p>
+                            <p class="justify-content-between">Illustration & Logo Design</p>
                             <p>Jan. 01, 2022</p>
                         </div>
                     </div>
