--- a/BootStrap/Top_A_One/about.html
+++ b/BootStrap/Top_A_One/about.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <!-- start nav bar -->
-    <nav class="navbar navbar-expand-lg nav_bg">
+    <nav class="navbar navbar-expand-md nav_bg sticky-lg-top ">
         <div class="container-fluid mx-md-4 mx-lg-5">
             <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/logo_1.jpg" alt="" width="100px" height="100px"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+            <button class="navbar-toggler bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link nav_hover me-4 active active_page" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link nav_hover me-4 active text-white" aria-current="page" href="index.html">Home</a>
                     </li>
                     <div class="dropdown">
                         <button data-mdb-button-init
@@ -28,20 +28,20 @@
                           Category
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                          <li><a class="dropdown-item" href="#">Computer Basic</a></li>
-                          <li><a class="dropdown-item" href="#">Excel for Office</a></li>
-                          <li><a class="dropdown-item" href="#">Business Pagemaker</a></li>
-                          <li><a class="dropdown-item" href="#">Photoshop for Business</a></li>
-                          <li><a class="dropdown-item" href="#">Adobe Illustrator</a></li>
-                          <li><a class="dropdown-item" href="#">Software Installation</a></li>
-                          <li><a class="dropdown-item" href="#">Vedio Editing for Basic</a></li>
+                          <li ><a class="dropdown-item" href="computer_basic.html">Computer Basic</a></li>
+                          <li><a class="dropdown-item" href="excel_for_office.html">Excel for Office</a></li>
+                          <li><a class="dropdown-item" href="business_pagemaker.html">Business Pagemaker</a></li>
+                          <li><a class="dropdown-item" href="photoshop_for_business.html">Photoshop for Business</a></li>
+                          <li><a class="dropdown-item" href="adobe_illustractor.html">Adobe Illustrator</a></li>
+                          <li><a class="dropdown-item" href="software_installation.html">Software Installation</a></li>
+                          <li><a class="dropdown-item" href="vedio_editing_basic.html">Vedio Editing for Basic</a></li>
                         </ul>
                     </div>
                     <li class="nav-item">
-                        <a class="nav-link nav_hover me-4  text-white" href="course.html">Course</a>
+                        <a class="nav-link nav_hover me-4 text-white" href="course.html">Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav_hover me-4  text-white" href="about.html">About</a>
+                        <a class="nav-link nav_hover me-4  active_page" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav_hover me-4  text-white" href="contact.html">Contact</a>
@@ -53,7 +53,7 @@
                         <a class="nav-link nav_hover me-4  text-white" href="login.html">Login</a>
                     </li>
                 </ul>
-                <form class="justify-content-end me-5">
+                <form class="justify-content-end me-5 d-none d-lg-block">
                     <a class="btn btn-light nav_btn" type="button" href="course.html"><i class="fa-solid fa-circle-plus me-2"></i>Apply Now</a>
                 </form>
             </div>
@@ -61,36 +61,62 @@
     </nav>
     <!-- end nav bar -->
 
-    <h1>This is About Page</h1>
+    <!-- start carousel -->
+    <section class="main">
+        <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="text-white carousel_text ms-2 ms-md-5 ms-lg-5">
+                        <p class="active_page text-center">Enjoy smooth learning</p>
+                        <h1 class="fw-bold carousel_head text-center">Courses</h1>
+                        <p class="text-center fw-bold fs-4">Home <span class=" course_hd"><i class="fa-solid fa-minus"></i></span> About</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end carousel -->
 
+    
+    
     <!-- start footer -->
-    <footer class="container-fluid bg-dark">
+    <footer class="container-fluid bg-dark mt-5">
         <div class="container text-white py-5">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3">
                     <img src="images/logo_1.jpg" alt="" class="footer_logo" >
                     <p>It's an ideal opportunity to begin investing your energy such that illuminates you.</p>
                     <p>
-                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
-                        <a href="https://www.youtube.com/@topaonecomputer"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
-                        <a href="https://t.me/topaonetelegram"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
-                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
+                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi" class="social_logo"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
+                        <a href="https://www.youtube.com/@topaonecomputer" class="social_logo"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
+                        <a href="https://t.me/topaonetelegram" class="social_logo"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
+                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc" class="social_logo"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
                     </p>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Enter Email.." aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <button class="btn btn-warning" type="button" id="button-addon2">Subscribe</button>
+                      </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-2">
-                    <h5 class="pt-3 ms-lg-5">Quick Links</h5>
-                    <hr class="w-25 ms-lg-5">
-                    <a href="index.html" class="d-block text-decoration-none text-white my-3 ms-lg-5"><i class="fa-solid fa-angle-right me-2"></i>Home</a>
-                    <a href="about.html" class="d-block text-decoration-none text-white my-3 ms-lg-5"><i class="fa-solid fa-angle-right me-2"></i>About</a>
-                    <a href="course.html" class="d-block text-decoration-none text-white my-3 ms-lg-5"><i class="fa-solid fa-angle-right me-2"></i>Course</a>
-                    <a href="blog.html" class="d-block text-decoration-none text-white my-3 ms-lg-5"><i class="fa-solid fa-angle-right me-2"></i>Blog</a>
+                    <h5 class="pt-3 ms-lg-3">Quick Links</h5>
+                    <hr class="w-25 ms-lg-3">
+                    <a href="index.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Home</a>
+                    <hr class="ms-lg-3 tm_hr border-light me-lg-3">
+                    <a href="about.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>About</a>
+                    <hr class="ms-lg-3 tm_hr border-light me-lg-3">
+                    <a href="course.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Course</a>
+                    <hr class="ms-lg-3 tm_hr border-light me-lg-3">
+                    <a href="contact.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Contact</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <h5 class="pt-3">Contact us</h5>
                     <hr class="w-25">
                     <p><i class="fa-solid fa-phone-volume me-3"></i>09-761746819</p>
-                    <p><i class="fa-solid fa-envelope me-3"></i>aungphyozaw@gmail.com</p>
+                    <hr class="tm_hr border-light me-lg-3">
+                    <p><i class="fa-solid fa-envelope me-3"></i>aungphyozaw239401@gmail.com</p>
+                    <hr class="tm_hr border-light me-lg-3">
                     <p><i class="fa-solid fa-location-dot me-3"></i>Pathein, Ayarwaddy Region</p>
+                    <hr class="tm_hr border-light me-lg-3">
                     <p><i class="fa-solid fa-globe me-3"></i>www.topaone.com</p>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
@@ -98,25 +124,22 @@
                     <hr class="w-25">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/5.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
                             <p class="justify-content-between">Photoshop for Business</p>
                             <p>Jan. 01, 2022</p>
                         </div>
                     </div>
+                    <hr class="tm_hr border-light me-lg-3">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/6.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
-                            <p class="justify-content-between">Photoshop for Business</p>
+                            <p class="justify-content-between">Illustration & Logo Design</p>
                             <p>Jan. 01, 2022</p>
                         </div>
-                    </div>
-                    <div class="input-group mb-3">
-                      <input type="text" class="form-control" placeholder="Enter Email.." aria-label="Recipient's username" aria-describedby="button-addon2">
-                      <button class="btn btn-danger" type="button" id="button-addon2">Subscribe</button>
                     </div>
                 </div>
             </div>
@@ -135,7 +158,6 @@
         </div>
     </footer>
     <!-- end footer -->
-
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="fontawesome/js/all.min.js"></script>
 </body>
