--- a/BootStrap/Top_A_One/business_pagemaker.html
+++ b/BootStrap/Top_A_One/business_pagemaker.html
@@ -32,7 +32,7 @@
                           <li><a class="dropdown-item" href="excel_for_office.html">Excel for Office</a></li>
                           <li><a class="dropdown-item  active_page" href="business_pagemaker.html">Business Pagemaker</a></li>
                           <li><a class="dropdown-item" href="photoshop_for_business.html">Photoshop for Business</a></li>
-                          <li><a class="dropdown-item" href="adobe_illustractor.html">Adobe Illustrator</a></li>
+                          <li><a class="dropdown-item" href="adobe_illustractor.html">Illustration & Logo Design</a></li>
                           <li><a class="dropdown-item" href="software_installation.html">Software Installation</a></li>
                           <li><a class="dropdown-item" href="vedio_editing_basic.html">Vedio Editing for Basic</a></li>
                         </ul>
@@ -148,7 +148,7 @@
                             <p class=""><a href="excel_for_office.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Excel for Office</a></p>
                             <p class=""><a href="business_pagemaker.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Busines Pagemaker</a></p>
                             <p class=""><a href="photoshop_for_business.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Photoshop for Business</a></p>
-                            <p class=""><a href="adobe_illustractor.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Adobe Illustractor</a></p>
+                            <p class=""><a href="adobe_illustractor.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Illustration & Logo Design</a></p>
                             <p class=""><a href="software_installation.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Software Installation</a></p>
                             <p class=""><a href="vedio_editing_basic.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Vedio Editing Basic</a></p>
                         </div>
@@ -168,7 +168,7 @@
                         <hr class="mx-3">
                         <p>
                             <span class="ms-3">350,000 MMK</span>
-                            <a href="photoshop_for_business.html"><button class="btn btn-outline-warning float-end me-3">Join Now</button></a>
+                            <a href="photoshop_for_business.html"><button class="btn btn-outline-warning float-end me-3">See More</button></a>
                         </p>
                 </div>
             </div>
@@ -176,13 +176,13 @@
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/6.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
-                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Adobe Illustractor</a>
+                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Illustration & Logo Design</a>
                         </div>
                         <p><span class="ms-3">12 Lectures</span><span class="float-end me-3">4 Months</span></p>
                         <hr class="mx-3">
                         <p>
                             <span class="ms-3">350,000 MMK</span>
-                            <a href="adobe_illustractor.html"><button class="btn btn-outline-warning float-end me-3">Join Now</button></a>
+                            <a href="adobe_illustractor.html"><button class="btn btn-outline-warning float-end me-3">See More</button></a>
                         </p>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                         <hr class="mx-3">
                         <p>
                             <span class="ms-3">350,000 MMK</span>
-                            <a href="vedio_editing_basic.html"><button class="btn btn-outline-warning float-end me-3">Join Now</button></a>
+                            <a href="vedio_editing_basic.html"><button class="btn btn-outline-warning float-end me-3">See More</button></a>
                         </p>
                 </div>
             </div>
@@ -213,10 +213,10 @@
                     <img src="images/logo_1.jpg" alt="" class="footer_logo" >
                     <p>It's an ideal opportunity to begin investing your energy such that illuminates you.</p>
                     <p>
-                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
-                        <a href="https://www.youtube.com/@topaonecomputer"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
-                        <a href="https://t.me/topaonetelegram"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
-                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
+                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi" class="social_logo"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
+                        <a href="https://www.youtube.com/@topaonecomputer" class="social_logo"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
+                        <a href="https://t.me/topaonetelegram" class="social_logo"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
+                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc" class="social_logo"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
                     </p>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Enter Email.." aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -250,7 +250,7 @@
                     <hr class="w-25">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/5.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
                             <p class="justify-content-between">Photoshop for Business</p>
@@ -260,10 +260,10 @@
                     <hr class="tm_hr border-light me-lg-3">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/6.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
-                            <p class="justify-content-between">Photoshop for Business</p>
+                            <p class="justify-content-between">Illustration & Logo Design</p>
                             <p>Jan. 01, 2022</p>
                         </div>
                     </div>
