--- a/BootStrap/Top_A_One/index.html
+++ b/BootStrap/Top_A_One/index.html
@@ -32,7 +32,7 @@
                           <li><a class="dropdown-item" href="excel_for_office.html">Excel for Office</a></li>
                           <li><a class="dropdown-item" href="business_pagemaker.html">Business Pagemaker</a></li>
                           <li><a class="dropdown-item" href="photoshop_for_business.html">Photoshop for Business</a></li>
-                          <li><a class="dropdown-item" href="adobe_illustractor.html">Adobe Illustrator</a></li>
+                          <li><a class="dropdown-item" href="adobe_illustractor.html">Illustration & Logo Design</a></li>
                           <li><a class="dropdown-item" href="software_installation.html">Software Installation</a></li>
                           <li><a class="dropdown-item" href="vedio_editing_basic.html">Vedio Editing for Basic</a></li>
                         </ul>
@@ -185,7 +185,7 @@
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/6.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
-                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Adobe Illustractor</a>
+                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Illustration & Logo Design</a>
                         </div>
                         <p><span class="ms-3">12 Lectures</span><span class="float-end me-3">4 Months</span></p>
                         <hr class="mx-3">
@@ -217,7 +217,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-lg-6">
-                <img src="images/about us.jpg" alt="" class="w-100">
+                <img src="images/about us.jpg" alt="" class="w-100 img-fluid">
             </div>
             <div class="col-md-12 col-lg-6 shadow bg-body-tertiary rounded  mt-4 mt-xl-0 ">
                 <div>
@@ -318,10 +318,10 @@
                     <img src="images/logo_1.jpg" alt="" class="footer_logo" >
                     <p>It's an ideal opportunity to begin investing your energy such that illuminates you.</p>
                     <p>
-                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
-                        <a href="https://www.youtube.com/@topaonecomputer"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
-                        <a href="https://t.me/topaonetelegram"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
-                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
+                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi" class="social_logo"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
+                        <a href="https://www.youtube.com/@topaonecomputer" class="social_logo"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
+                        <a href="https://t.me/topaonetelegram" class="social_logo"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
+                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc" class="social_logo"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
                     </p>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Enter Email.." aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -337,7 +337,7 @@
                     <hr class="ms-lg-3 tm_hr border-light me-lg-3">
                     <a href="course.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Course</a>
                     <hr class="ms-lg-3 tm_hr border-light me-lg-3">
-                    <a href="blog.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Blog</a>
+                    <a href="contact.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Contact</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <h5 class="pt-3">Contact us</h5>
@@ -355,7 +355,7 @@
                     <hr class="w-25">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/5.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
                             <p class="justify-content-between">Photoshop for Business</p>
@@ -365,10 +365,10 @@
                     <hr class="tm_hr border-light me-lg-3">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/6.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
-                            <p class="justify-content-between">Photoshop for Business</p>
+                            <p class="justify-content-between">Illustration & Logo Design</p>
                             <p>Jan. 01, 2022</p>
                         </div>
                     </div>
