--- a/BootStrap/Top_A_One/vedio_editing_basic.html
+++ b/BootStrap/Top_A_One/vedio_editing_basic.html
@@ -28,13 +28,13 @@
                           Category
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                          <li ><a class="dropdown-item active_page" href="computer_basic.html">Computer Basic</a></li>
+                          <li ><a class="dropdown-item" href="computer_basic.html">Computer Basic</a></li>
                           <li><a class="dropdown-item" href="excel_for_office.html">Excel for Office</a></li>
                           <li><a class="dropdown-item" href="business_pagemaker.html">Business Pagemaker</a></li>
                           <li><a class="dropdown-item" href="photoshop_for_business.html">Photoshop for Business</a></li>
-                          <li><a class="dropdown-item" href="adobe_illustractor.html">Adobe Illustrator</a></li>
+                          <li><a class="dropdown-item" href="adobe_illustractor.html">Illustration & Logo Design</a></li>
                           <li><a class="dropdown-item" href="software_installation.html">Software Installation</a></li>
-                          <li><a class="dropdown-item" href="vedio_editing_basic.html">Vedio Editing for Basic</a></li>
+                          <li><a class="dropdown-item active_page" href="vedio_editing_basic.html">Vedio Editing for Basic</a></li>
                         </ul>
                     </div>
                     <li class="nav-item">
@@ -69,7 +69,7 @@
                     <div class="text-white carousel_text ms-2 ms-md-5 ms-lg-5">
                         <p class="active_page text-center">Enjoy smooth learning</p>
                         <h1 class="fw-bold carousel_head text-center">Courses</h1>
-                        <p class="text-center fw-bold fs-4">Home <span class=" course_hd"><i class="fa-solid fa-minus"></i></span> Course <span class=" course_hd"><i class="fa-solid fa-minus"></i></span>Computer Basic Course</p>
+                        <p class="text-center fw-bold fs-4">Home <span class=" course_hd"><i class="fa-solid fa-minus"></i></span> Course <span class=" course_hd"><i class="fa-solid fa-minus"></i></span>Vedio Editing Basic</p>
                     </div>
                 </div>
             </div>
@@ -82,32 +82,33 @@
         <div class="row">
             <div class="col-12 col-lg-8">
                 <div class="p-3 border-0 shadow rounded mt-2">
-                    <h2 class="fw-bold tm_head mb-5">Computer Basice Courses</h2>
+                    <h2 class="fw-bold tm_head mb-5">Vedio Editing for Basice Courses</h2>
                     <p class="fw-bold fs-4">Course Description</p>
-                    <p>Welcome to the Computer Basic Course - 9 Courese in 1 (Over 36 hours of content)</p>
-                    <p>In this practical hands-on training, you're going to learn to become a knowledgefull computer user with this ultimate course bundle that includes 9 courses in 1!</p>
-                    <p>If you wish to find out the skills that should be covered in a basic computer course syllabus in anywhere around the world, then reading this blog will help. Before we delve into the basic computer course syllabus, let's look at the scope of basic computer and what the future holds.</p>
-                    <p>We focus a great deal on the understanding of computer knowledge and influence triggers which are crucial for becoming a well rounded Digital. We understand that course is important to build a basic foundation, we understand that course alone isn't going to get the job done so that's why this course is packed with practical hands-on examples that you can follow step by step</p>
+                    <p>Welcome to the Vedio Editing for Basic Course - 10 Courese in 1 (Over 36 hours of content)</p>
+                    <p>In this practical hands-on training, you're going to learn to become a knowledgefull computer user with this ultimate course bundle that includes 10 courses in 1!</p>
+                    <p>If you wish to find out the skills that should be covered in a vedio editing for basic vedio editing syllabus in anywhere around the world, then reading this blog will help. Before we delve into the vedio editing for basic course syllabus, let's look at the scope of vedio editing basic and what the future holds.</p>
+                    <p>We focus a great deal on the understanding of computer knowledge and influence triggers which are crucial for becoming a well rounded Digital. We understand that course is important to build a basic foundation, we understand that course alone isn't going to get the job done so that's why this course is packed with practical hands-on examples that you can follow step by step.</p>
                     <p class="fw-bold fs-4">What you'll learn</p>
                     <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Introduction</span></p>
-                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">English & Myanmar Typing</span></p>
-                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Using Window 10</span></p>
-                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Microsoft Word 2016/2019</span></p>
-                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Microsoft Excel 2016/2019</span></p>
-                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Microsoft Powerpoint 2016/2019</span></p>
-                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">CD DVD Burning</span></p>
-                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Using Internet & Email</span></p>
-                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Other Computer Knowledge</span></p>
-                    <p>Computer skills at work refer to the knowledge and ability to use various digital tools and technologies to complete job tasks efficiently and effectively. These skills can include: The ability to use a computer, navigate the internet, and use common software applications such as Microsoft Office.</p>
+                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Software Installation</span></p>
+                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Learning Screen Recording Software</span></p>
+                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Screen Recording & Editing</span></p>
+                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Learning Interface of Editing Software</span></p>
+                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">File Save & Export</span></p>
+                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Basic Editing</span></p>
+                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Learning Transition & Animation</span></p>
+                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Learning Keyframe & Effects</span></p>
+                    <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Create Motion Graphic Animation</span></p>
+                    <p>Video editing is the art of manipulating and combining video files to create a completed video project. Video Editors will cut together film clips, alter and correct sound mixing, add digital effects, and make other essential technical changes to video files.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-12 p-2">
                         <div class="card course_img_hidden  mt-3 mt-lg-0 border-0 shadow">
-                            <img src="images/1.jpg" alt="" class="card-img-top course_img_hover">
+                            <img src="images/7.jpg" alt="" class="card-img-top course_img_hover">
                                 <div class="card-body">
-                                    <a href="" class="card-title fs-4 fw-bold text-decoration-none">Computer Basic</a>
+                                    <a href="" class="card-title fs-4 fw-bold text-decoration-none">Vedio Editing for Basic</a>
                                 </div>
                                 <p>
                                     <span class="ms-3">350,000 MMK</span>
@@ -147,7 +148,7 @@
                             <p class=""><a href="excel_for_office.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Excel for Office</a></p>
                             <p class=""><a href="business_pagemaker.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Busines Pagemaker</a></p>
                             <p class=""><a href="photoshop_for_business.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Photoshop for Business</a></p>
-                            <p class=""><a href="adobe_illustractor.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Adobe Illustractor</a></p>
+                            <p class=""><a href="adobe_illustractor.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Illustration & Logo Design</a></p>
                             <p class=""><a href="software_installation.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Software Installation</a></p>
                             <p class=""><a href="vedio_editing_basic.html" class="text-decoration-none text-dark course_hover"><i class="fa-solid fa-angle-right pe-3" style="color: rgb(255, 196, 102);"></i>Vedio Editing Basic</a></p>
                         </div>
@@ -156,7 +157,7 @@
             </div>
         </div>
         <div class="row">
-            <h2 class="text-center fw-bold tm_head mb-5">Popular Courses</h2>
+            <h2 class="text-center fw-bold tm_head mb-4 mt-5">Popular Courses</h2>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/5.jpg" alt="" class="card-img-top course_img_hover">
@@ -167,7 +168,7 @@
                         <hr class="mx-3">
                         <p>
                             <span class="ms-3">350,000 MMK</span>
-                            <a href="photoshop_for_business.html"><button class="btn btn-outline-warning float-end me-3">Join Now</button></a>
+                            <a href="photoshop_for_business.html"><button class="btn btn-outline-warning float-end me-3">See More</button></a>
                         </p>
                 </div>
             </div>
@@ -175,13 +176,13 @@
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/6.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
-                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Adobe Illustractor</a>
+                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Illustration & Logo Design</a>
                         </div>
                         <p><span class="ms-3">12 Lectures</span><span class="float-end me-3">4 Months</span></p>
                         <hr class="mx-3">
                         <p>
                             <span class="ms-3">350,000 MMK</span>
-                            <a href="adobe_illustractor.html"><button class="btn btn-outline-warning float-end me-3">Join Now</button></a>
+                            <a href="adobe_illustractor.html"><button class="btn btn-outline-warning float-end me-3">See More</button></a>
                         </p>
                 </div>
             </div>
@@ -195,7 +196,7 @@
                         <hr class="mx-3">
                         <p>
                             <span class="ms-3">350,000 MMK</span>
-                            <a href="vedio_editing_basic.html"><button class="btn btn-outline-warning float-end me-3">Join Now</button></a>
+                            <a href="vedio_editing_basic.html"><button class="btn btn-outline-warning float-end me-3">See More</button></a>
                         </p>
                 </div>
             </div>
@@ -212,10 +213,10 @@
                     <img src="images/logo_1.jpg" alt="" class="footer_logo" >
                     <p>It's an ideal opportunity to begin investing your energy such that illuminates you.</p>
                     <p>
-                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
-                        <a href="https://www.youtube.com/@topaonecomputer"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
-                        <a href="https://t.me/topaonetelegram"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
-                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
+                        <a href="https://www.facebook.com/topaonecomputercentrepathein?mibextid=JRoKGi" class="social_logo"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
+                        <a href="https://www.youtube.com/@topaonecomputer" class="social_logo"><i class="fa-brands fa-youtube fa-2x mx-2"></i></a>
+                        <a href="https://t.me/topaonetelegram" class="social_logo"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
+                        <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc" class="social_logo"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
                     </p>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Enter Email.." aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -249,7 +250,7 @@
                     <hr class="w-25">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/5.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
                             <p class="justify-content-between">Photoshop for Business</p>
@@ -259,10 +260,10 @@
                     <hr class="tm_hr border-light me-lg-3">
                     <div class="row">
                         <div class="col-3">
-                            <img src="images/logo_1.jpg" alt="" class="footer_course">
+                            <img src="images/6.jpg" alt="" class="footer_course">
                         </div>
                         <div class="col">
-                            <p class="justify-content-between">Photoshop for Business</p>
+                            <p class="justify-content-between">Illustration & Logo Design</p>
                             <p>Jan. 01, 2022</p>
                         </div>
                     </div>
